<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.project.MainActivity">
    <item android:id="@+id/home"
          android:title="Home"
          android:orderInCategory="100"
    />
    <item android:title="Add Person" android:orderInCategory="101" android:id="@+id/addPerson"/>
    <item android:title="Show all" android:orderInCategory="102" android:id="@+id/showAll"/>



</menu>