<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/FirstFragment">

    <fragment
            android:id="@+id/FirstFragment"
            android:name="com.example.project.FirstFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_first">

        <action android:id="@+id/action_FirstFragment_to_addPerson2" app:destination="@id/addPerson2"/>
        <action android:id="@+id/action_FirstFragment_to_showAll2" app:destination="@id/showAll2"/>
    </fragment>
    <fragment android:id="@+id/addPerson2" android:name="com.example.project.AddPerson"
              android:label="fragment_add_person" tools:layout="@layout/fragment_add_person">
        <action android:id="@+id/action_addPerson2_to_showAll2" app:destination="@id/showAll2"/>
    </fragment>
    <fragment android:id="@+id/showAll2" android:name="com.example.project.ShowAll"
              android:label="fragment_show_all_list" tools:layout="@layout/fragment_show_all_list">
        <action android:id="@+id/action_showAll2_to_addPerson2" app:destination="@id/addPerson2"/>
        <action android:id="@+id/action_showAll2_to_FirstFragment" app:destination="@id/FirstFragment"/>
    </fragment>
</navigation>