...
            android:layout_height="wrap_content"
            android:text="Save"
            app:layout_constraintTop_toBottomOf="@id/editPhoneNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            app:layout_constraintTop_toBottomOf="@id/buttonSave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
...
